--- a/Ramble/en.lproj/MainStoryboard.storyboard
+++ b/Ramble/en.lproj/MainStoryboard.storyboard
@@ -53,6 +53,10 @@
                                     <action selector="toggleViewButtonPressed:" destination="2" eventType="touchUpInside" id="VvC-sq-9pU"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="listIcon.png" id="aez-vp-vzP">
+                                <rect key="frame" x="284" y="428" width="34" height="26"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -187,8 +191,8 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="topbar.png" id="S3P-dO-pbA">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="73"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="topBar.png" id="S3P-dO-pbA">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="ramble.png" id="hlm-UU-9Xc">
@@ -210,7 +214,7 @@
                                     <action selector="doneButtonPressed:" destination="jgy-c8-mbi" eventType="touchUpInside" id="db8-oL-8Hx"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="lq9-Nh-dzO">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="lq9-Nh-dzO" userLabel="Back Button">
                                 <rect key="frame" x="20" y="16" width="72" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
@@ -225,10 +229,27 @@
                                     <action selector="backButtonPressed:" destination="jgy-c8-mbi" eventType="touchUpInside" id="M0r-vh-xNC"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="tKi-oy-D1J" userLabel="Accessory Button">
+                                <rect key="frame" x="20" y="17" width="35" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" backgroundImage="gear.png">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="accessoryButtonPressed:" destination="jgy-c8-mbi" eventType="touchUpInside" id="OUx-P5-T1O"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="accessoryButton" destination="tKi-oy-D1J" id="jXx-Jn-Esu"/>
+                        <outlet property="backButton" destination="lq9-Nh-dzO" id="mtL-vi-Q2z"/>
                         <outlet property="subView" destination="vhH-E3-BO3" id="tvg-Rh-dR2"/>
                     </connections>
                 </viewController>
@@ -546,8 +567,10 @@
         <image name="bottomrightdown.png" width="99" height="102"/>
         <image name="bottomrightup.png" width="99" height="102"/>
         <image name="gear.png" width="52" height="52"/>
+        <image name="listIcon.png" width="68" height="52"/>
         <image name="ramble.png" width="237" height="78"/>
-        <image name="topbar.png" width="640" height="140"/>
+        <image name="topBar.png" width="640" height="132"/>
+        <image name="topbar.png" width="16" height="16"/>
     </resources>
     <classes>
         <class className="CaptureViewController" superclassName="UIViewController">
@@ -570,7 +593,11 @@
         <class className="LocalTracksNavigationController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/LocalTracksNavigationController.h"/>
             <relationships>
+                <relationship kind="action" name="accessoryButtonPressed:"/>
+                <relationship kind="action" name="backButtonPressed:"/>
                 <relationship kind="action" name="doneButtonPressed:"/>
+                <relationship kind="outlet" name="accessoryButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="backButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="subView" candidateClass="UIView"/>
             </relationships>
         </class>
